--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ baseurl: portfolio
 # Title of the Site
 title: Vinicius Guerra e Ribas
 # Description of the Site
-description: A customizable Jekyll portfolio theme
+description: Portfolio & Repository
 # URL of Image of the Site
 site-image: /WhatATheme/assets/images/meta.jpg
 # Keywords of the Site
