--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ markdown: kramdown
 # URL of the Site
 url: 'https://viniciusgribas.github.io/portfolio/'
 # Base URL of the Site (i.e., Name of the Repository in which the Site is hosted)
-baseurl: portfolio 
+baseurl:
 
 # Title of the Site
 title: Vinicius Guerra e Ribas
