--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 markdown: kramdown
 
 # URL of the Site
-url: 'https://viniciusgribas.github.io/portfolio/'
+url: ''
 # Base URL of the Site (i.e., Name of the Repository in which the Site is hosted)
-baseurl:
+baseurl:''
 
 # Title of the Site
 title: Vinicius Guerra e Ribas
