--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,5 +1,5 @@
 - name: ANP PROJECT [EXCEL AUTOMATION AND ELT PROCESS]
-  image: https://repository-images.githubusercontent.com/470692473/
-  link: https://viniciusgribas.github.io/portfolio/blog/ANP-Project
+  image: https://repository-images.githubusercontent.com/470692473/e7682a35-2a0f-4508-89d9-bf4ecb30b5cc
+  link: https://viniciusgribas.github.io/blog/ANP-Project
   description: This project is a simple ETL where there is an Excel automation via VBA and then a data extraction via Python. The programming languages used were PYTHON and VBA EXCEL.
   
