--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,3 +3,8 @@
   link: https://viniciusgribas.github.io/blog/ANP-Project
   description: This project is a simple ETL where there is an Excel automation via VBA and then a data extraction via Python. The programming languages used were PYTHON and VBA EXCEL.
   
+- name: Graphical and Spatial Exploratory Analysis [ PYTHON DATA EXPLORATORY DATA ANALYSIS]
+  image: https://repository-images.githubusercontent.com/474626185/54e01fbf-caf6-42c0-b392-d27d05303655
+  link: https://viniciusgribas.github.io/blog/Analysis-of-the-Brazilian-power-generation-system
+  description: The project consists of an exploratory data analysis. The objective of this analysis is to visualize the Brazilian electric generation system in a diagrammatic and spatial way, extracting insights. For this, a dataframe of the GeoDataFrame type was used and, mainly, the power of the Plotly Express library optimized for the Python language. 
+  
