--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ heroimage: https://images.pexels.com/photos/7887842/pexels-photo-7887842.jpeg?w=
 
 # Social Media and Contact
 # If you don't want to use any icon, you can leave them blank.
-email: viniciusgribas@gmail.com
+email:  mailto:viniciusgribas@gmail.com?subject=%5BPortfolio%5D%20-%20Contact 
 facebook_username: 
 twitter_username: 
 instagram_username: 
