--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ disqus-shortname: viniciusgribas
 # Name of the Author
 author-name: Vinicius Guerra e Ribas
 # URL for the Image of the Author
-author-image: https://raw.githubusercontent.com/viniciusgribas/portfolio/master/perfil1mini.JPG
+author-image: https://media-exp1.licdn.com/dms/image/C4D03AQEkzAC97JCrqQ/profile-displayphoto-shrink_400_400/0/1646687762984?e=1655337600&v=beta&t=xE9uMThcYXmBWG7aC6J0vtAn9Ixny4ytyfnDf15sywY
 author-about: >                                                                                                                                                             
                 ❝'I'm an Energy Engineer and I'm doing a post-graduation in Data Science & Analytics. 
                 Currently, I work as an Energy Sector Analyst at Energisa.S.A. 
