--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ email:  mailto:viniciusgribas@gmail.com?subject=%5BPortfolio%5D%20-%20Contact
 facebook_username: 
 twitter_username: 
 instagram_username: 
-linkedin_username: https://www.linkedin.com/in/vinicius-guerra-e-ribas/
-github_username:  https://github.com/viniciusgribas
+linkedin_username: vinicius-guerra-e-ribas
+github_username: viniciusgribas
 youtube_channel_id: 
 reddit_username: 
 behance_username: 
